# M1

./: .gitignore  .gitmodules  .goreleaser.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.header  PULL_REQUEST_TEMPLATE.md  README.md  factory.go  go.mod  tokens
canonical/: Cargo.toml  README.md
canonical/.cargo/: config.toml
canonical/canonical-block-executor/: Cargo.toml
canonical/canonical-block-executor/src/: lib.rs
canonical/canonical-block-executor/src/canonical_block_executor/: mod.rs
canonical/canonical-move-natives/: Cargo.toml  README.md
canonical/canonical-move-resolver/: Cargo.toml  README.md
canonical/canonical-move-resolver/src/: lib.rs  main.rs
canonical/canonical-move-resolver/src/canonical_move_resolver/: aptos.rs  mod.rs  sui.rs
canonical/canonical-rpc/: Cargo.toml  README.md
canonical/canonical-types/: Cargo.toml
canonical/canonical-types/src/block/: block.rs
canonical/canonical-types/src/transaction/: transaction.rs
m1/: .gitignore  Cargo.toml  DEBUGGING.md  INDEXER_FIX.md  LOCAL.md  README.md  avalanche-network-runner.nix  flake.nix  justfile  rustfmt.toml  scratch.nix
m1/.cargo/: config.toml
m1/.movement/: config.yaml
m1/JavaScript-client/: README.md
m1/JavaScript-client/examples/typescript/: multisig_transaction.ts
m1/JavaScript-client/examples/typescript-esm/: index.ts
m1/e2e-benchmark/: Cargo.toml
m1/e2e-benchmark/src/: main.rs
m1/infrastructure/: README.md
m1/infrastructure/evm-rpc/: .env.example  .gitignore  .prettierrc  README.md  package-lock.json  package.json
m1/infrastructure/evm-rpc/abi/: bridge.json
m1/infrastructure/evm-rpc/src/: app.js  bridge.js  const.js  db.js  helper.js  provider.js  rate.js  rpc.js  task.js
m1/infrastructure/subnet-proxy/: package-lock.json  package.json  readme.md
m1/infrastructure/subnet-proxy/src/: app.js  const.js  provider.js  utils.js
m1/m1-cli/: Cargo.toml  README.md
m1/m1-cli/homebrew/: README.md
m1/m1-cli/src/: main.rs
m1/movement/: CHANGELOG.md  Cargo.toml  README.md
m1/movement-benchmark/: Cargo.toml
m1/movement/e2e/: main.py  pyproject.toml
m1/movement/e2e/cases/: account.py  init.py
m1/movement/src/: lib.rs  main.rs
m1/movement/src/account/: fund.rs  key_rotation.rs
m1/movement/src/common/: init.rs  types.rs  utils.rs
m1/movement/src/config/: mod.rs
m1/movement/src/faucet/: mod.rs
m1/movement/src/node/: mod.rs
m1/movement/src/test/: mod.rs
m1/movement/src/update/: helpers.rs
m1/scripts/: anr.sh  build.debug.sh  build.release.sh  default.nix  flake.nix  fuji.sh  run.debug.sh  simulator.sh  start-subnet.sh  subnet-cli-setup.sh  tests.debug.sh  tests.e2e.sh  tests.unit.sh  tests.unused.sh
m1/simulator/: Cargo.toml
m1/simulator/src/: commands.rs  lib.rs  main.rs
m1/standalone-sui-subnet/: Cargo.toml  README.md
m1/subnet/: Cargo.toml
m1/subnet-request-proxy/: Cargo.toml
m1/subnet-request-proxy/src/: main.rs  subnet.rs  types.rs  utils.rs
m1/subnet-request-proxy/src/apis/: accounts.rs  blocks.rs  chain.rs  mod.rs  tables.rs  transactions.rs
m1/subnet-request-proxy/src/rate/: layer.rs  mod.rs  rate.rs  service.rs
m1/subnet/src/: lib.rs  main.rs
m1/subnet/src/api/: chain_handlers.rs  eth_rpc_handlers.rs  mod.rs  static_handlers.rs
m1/subnet/src/block/: mod.rs
m1/subnet/src/executor/: executor.rs  mod.rs
m1/subnet/src/rpc/: mod.rs
m1/subnet/src/state/: mod.rs
m1/subnet/src/util/: mod.rs
m1/subnet/src/vm/: aptos.rs  mod.rs  vm.rs
m1/subnet/src/vm3/: mod.rs
m1/tests/e2e/: Cargo.toml
m1/tests/e2e/src/: lib.rs
m1/util/avalanche-json-rpc/: Cargo.toml
m1/util/avalanche-json-rpc/src/: lib.rs
m1/util/movement-sdk/: Cargo.toml
m1/util/movement-sdk/src/: lib.rs
movement-sdk/: CANONICAL.md  Cargo.toml  package-lock.json
movement-sdk/.cargo/: config.toml
movement-sdk/artifact/artifacts/: Cargo.toml
movement-sdk/artifacts/: Cargo.toml
movement-sdk/artifacts/src/: lib.rs
movement-sdk/artifacts/src/known_artifacts/: mod.rs  registry.rs
movement-sdk/clis/aptos/: Cargo.toml  README.md
movement-sdk/clis/aptos/e2e/: common.py  local_testnet.py
movement-sdk/clis/aptos/src/: lib.rs
movement-sdk/clis/movement/: Cargo.toml  README.md
movement-sdk/clis/movement/src/: lib.rs  main.rs
movement-sdk/execution/: README.md
movement-sdk/execution/aptos-block-executor/: Cargo.toml
movement-sdk/execution/aptos-block-executor/src/: aptos_block_executor.rs  lib.rs
movement-sdk/execution/canonical-block-executor/: Cargo.toml
movement-sdk/execution/sui-block-executor/: Cargo.toml  README.md
movement-sdk/execution/sui-block-executor/src/: lib.rs  sui_block_executor.rs
movement-sdk/movement-sdk/: Cargo.toml
movement-sdk/movement-sdk-avalanche/: Cargo.toml
movement-sdk/movement-sdk-avalanche/src/: lib.rs
movement-sdk/movement-sdk-avalanche/src/data_availability/: block.rs  data_availability_layer.rs  mod.rs
movement-sdk/movement-sdk/src/: lib.rs
movement-sdk/services/: Cargo.toml
movement-sdk/services/src/m1/: localnet.rs  mevm.rs  mod.rs  proxy.rs  testnet.rs
movement-sdk/sui-helpers/sui-backing-store-rocksdb/: README.md
movement-sdk/sui-helpers/sui-backing-store-rocksdb/src/: lib.rs
movement-sdk/sui-helpers/sui-block-authority-providers/: Cargo.toml
movement-sdk/sui-helpers/sui-block-authority-providers/src/: lib.rs
movement-sdk/types/aptos-helper-types/: Cargo.toml
movement-sdk/types/canonical-types/: Cargo.toml
movement-sdk/types/sui-helper-types/: Cargo.toml  README.md
movement-sdk/util/artifact/: Cargo.toml
movement-sdk/util/test-helpers/: Cargo.toml
movement-sdk/util/util/: Cargo.toml
movement-sdk/util/util/src/: lib.rs
spacesvm-rs/spaces-cli/: .gitignore  Cargo.toml
spacesvm-rs/spacesvm/: Cargo.toml
spacesvm-rs/spacesvm/src/: genesis.rs  lib.rs  network.rs
spacesvm-rs/spacesvm/tests/: common.rs  integration_tests.rs
spacesvm-rs/tests/e2e/: Cargo.toml
timestampvm-rs/tests/e2e/: Cargo.toml
timestampvm-rs/timestampvm/: Cargo.toml
timestampvm-rs/timestampvm/src/: lib.rs
vm/aptos-vm/hello/: Cargo.toml
vm/aptos-vm/subnet/: Cargo.toml
(+612 files in other folders)
