[workspace]
resolver = "2"
members = [

    "canonical-move-resolver",
    "canonical-move-natives",

    "canonical-block-executor",

    "canonical-types"

]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.70"

# testing

[workspace.dependencies]
# internal
canonical-types = { path = "../canonical-types" }

# general
anyhow = "1.0.44"
futures = "0.3.17"
rand = "0.8.4"
bcs = "0.1.0"

# aptos
aptos-framework = { path = "../third-party/aptos-core/aptos-move/framework" }
aptos-vm = { path = "../third-party/aptos-core/aptos-move/aptos-vm" }
aptos-types = { path = "../third-party/aptos-core/types" }
aptos-executor = { path = "../third-party/aptos-core/execution/executor" }
aptos-executor-types = { path = "../third-party/aptos-core/execution/executor-types" }
aptos-storage-interface = { path = "../third-party/aptos-core/storage/storage-interface" }

# sui
sui-adapter-latest = { path = "../third-party/sui/sui-execution/latest/sui-adapter" }
sui-types = { path = "../third-party/sui/crates/sui-types" }

# movement
movement-sdk = { path = "../movement-sdk/movement-sdk" }

# patches
[replace]
"move-abigen:0.1.0" = { path = "../third-party/sui/external-crates/move/move-prover/move-abigen" }