[workspace]
resolver = "2"
members = [

    "canonical-move-resolver",
    "canonical-move-natives",

    "canonical-block-executor",

    "canonical-types"

]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.70"

# testing

[workspace.dependencies]
# internal
canonical-types = { path = "../canonical-types" }

# general
anyhow = "1.0.44"
futures = "0.3.17"
rand = "0.8.4"
bcs = "0.1.0"

# aptos
aptos-framework = { path = "../vendors/aptos-core/aptos-move/framework" }
aptos-vm = { path = "../vendors/aptos-core/aptos-move/aptos-vm" }
aptos-types = { path = "../vendors/aptos-core/types" }
aptos-executor = { path = "../vendors/aptos-core/execution/executor" }
aptos-executor-types = { path = "../vendors/aptos-core/execution/executor-types" }
aptos-storage-interface = { path = "../vendors/aptos-core/storage/storage-interface" }

# sui
sui-adapter-latest = { path = "../vendors/sui/sui-execution/latest/sui-adapter" }
sui-types = { path = "../vendors/sui/crates/sui-types" }
sui-core = { path = "../vendors/sui/crates/sui-core" }

# movement
movement-sdk = { path = "../movement-sdk/movement-sdk" }

# patches
[replace]
"move-abigen:0.1.0" = { path = "../vendors/sui/external-crates/move/move-prover/move-abigen" }