[workspace]
resolver = "2"
members = [
    "subnet",
    "movement",
    "movement-benchmark",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1.0.62"
futures = "0.3.28"
rand = { version =  "0.7.3" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }



async-trait = "0.1.53"
base64 = "0.13.0"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "3.2.23", features = ["derive", "env", "suggestions"] }
clap_complete = "3.2.3"
codespan-reporting = "0.11.1"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
dirs = "4.0.0"
hex = "0.4.3"
hkdf = "0.10.0"
hostname = "0.3.1"
http = "0.2.3"
httpmock = "0.6"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
include_dir = { version = "0.7.2", features = ["glob"] }
indicatif = "0.15.0"
indoc = "1.0.6"
inferno = "0.11.14"
ipnet = "2.5.0"
itertools = "0.10.3"
num_cpus = "1.13.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json", "stream"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.8.24"
shadow-rs = "0.16.2"
tempfile = "3.3.0"
termcolor = "1.1.2"
thiserror = "1.0.48"
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.5.9"
walkdir = "2.3.2"

jemallocator = { version = "0.3.2", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }

# MOVE DEPENDENCIES
move-abigen = { path = "../aptos-core-1.7/third_party/move/move-prover/move-abigen" }
move-binary-format = { path = "../aptos-core-1.7/third_party/move/move-binary-format" }
move-bytecode-verifier = { path = "../aptos-core-1.7/third_party/move/move-bytecode-verifier" }
move-bytecode-utils = { path = "../aptos-core-1.7/third_party/move/tools/move-bytecode-utils" }
move-cli = { path = "../aptos-core-1.7/third_party/move/tools/move-cli" }
move-command-line-common = { path = "../aptos-core-1.7/third_party/move/move-command-line-common" }
move-coverage = { path = "../aptos-core-1.7/third_party/move/tools/move-coverage" }
move-compiler = { path = "../aptos-core-1.7/third_party/move/move-compiler" }
move-core-types = { path = "../aptos-core-1.7/third_party/move/move-core/types" }
move-docgen = { path = "../aptos-core-1.7/third_party/move/move-prover/move-docgen" }
move-disassembler = { path = "../aptos-core-1.7/third_party/move/tools/move-disassembler" }
move-ir-types = { path = "../aptos-core-1.7/third_party/move/move-ir/types" }
move-ir-compiler = { path = "../aptos-core-1.7/third_party/move/move-ir-compiler" }
move-bytecode-source-map = { path = "../aptos-core-1.7/third_party/move/move-ir-compiler/move-bytecode-source-map" }
move-model = { path = "../aptos-core-1.7/third_party/move/move-model" }
move-package = { path = "../aptos-core-1.7/third_party/move/tools/move-package" }
move-prover = { path = "../aptos-core-1.7/third_party/move/move-prover" }
move-prover-boogie-backend = { path = "../aptos-core-1.7/third_party/move/move-prover/boogie-backend" }
move-stackless-bytecode = { path = "../aptos-core-1.7/third_party/move/move-prover/bytecode" }
aptos-move-stdlib = { path = "aptos-move/framework/move-stdlib" }
move-prover-test-utils = { path = "../aptos-core-1.7/third_party/move/move-prover/test-utils" }
move-resource-viewer = { path = "../aptos-core-1.7/third_party/move/tools/move-resource-viewer" }
move-symbol-pool = { path = "../aptos-core-1.7/third_party/move/move-symbol-pool" }
move-table-extension = { path = "../aptos-core-1.7/third_party/move/extensions/move-table-extension" }
move-transactional-test-runner = { path = "../aptos-core-1.7/third_party/move/testing-infra/transactional-test-runner" }
move-unit-test = { path = "../aptos-core-1.7/third_party/move/tools/move-unit-test", features = ["table-extension"] }
move-vm-runtime = { path = "../aptos-core-1.7/third_party/move/move-vm/runtime" }
move-vm-test-utils = { path = "../aptos-core-1.7/third_party/move/move-vm/test-utils", features = ["table-extension"] }
move-vm-types = { path = "../aptos-core-1.7/third_party/move/move-vm/types" }
read-write-set = { path = "../aptos-core-1.7/third_party/move/tools/read-write-set" }
read-write-set-dynamic = { path = "../aptos-core-1.7/third_party/move/tools/read-write-set/dynamic" }

# aptos
# TODO: pleas remove unused dependencies
aptos = { path = "../aptos-core-1.7/crates/aptos" }
aptos-accumulator = { path = "../aptos-core-1.7/storage/accumulator" }
aptos-aggregator = { path = "../aptos-core-1.7/aptos-move/aptos-aggregator" }
aptos-api = { path = "../aptos-core-1.7/api" }
aptos-api-test-context = { path = "../aptos-core-1.7/api/test-context" }
aptos-api-types = { path = "../aptos-core-1.7/api/types" }
aptos-backup-cli = { path = "../aptos-core-1.7/storage/backup/backup-cli" }
aptos-backup-service = { path = "../aptos-core-1.7/storage/backup/backup-service" }
aptos-bounded-executor = { path = "../aptos-core-1.7/crates/bounded-executor" }
aptos-block-executor = { path = "../aptos-core-1.7/aptos-move/block-executor" }
aptos-bitvec = { path = "../aptos-core-1.7/crates/aptos-bitvec" }
aptos-build-info = { path = "../aptos-core-1.7/crates/aptos-build-info" }
aptos-cached-packages = { path = "../aptos-core-1.7/aptos-move/framework/cached-packages" }
aptos-channels = { path = "../aptos-core-1.7/crates/channel" }
aptos-cli-common = { path = "../aptos-core-1.7/crates/aptos-cli-common" }
aptos-compression = { path = "../aptos-core-1.7/crates/aptos-compression" }
aptos-consensus = { path = "../aptos-core-1.7/consensus" }
aptos-consensus-notifications = { path = "../aptos-core-1.7/state-sync/inter-component/consensus-notifications" }
aptos-consensus-types = { path = "../aptos-core-1.7/consensus/consensus-types" }
aptos-config = { path = "../aptos-core-1.7/config" }
aptos-crash-handler = { path = "../aptos-core-1.7/crates/crash-handler" }
aptos-crypto = { path = "../aptos-core-1.7/crates/aptos-crypto" }
aptos-crypto-derive = { path = "../aptos-core-1.7/crates/aptos-crypto-derive" }
aptos-data-client = { path = "../aptos-core-1.7/state-sync/aptos-data-client" }
aptos-data-streaming-service = { path = "../aptos-core-1.7/state-sync/state-sync-v2/data-streaming-service" }
aptos-db = { path = "../aptos-core-1.7/storage/aptosdb" }
aptos-db-indexer = { path = "../aptos-core-1.7/storage/indexer" }
aptos-db-tool = { path = "../aptos-core-1.7/storage/db-tool" }
aptos-debugger = { path = "../aptos-core-1.7/aptos-move/aptos-debugger" }
aptos-event-notifications = { path = "../aptos-core-1.7/state-sync/inter-component/event-notifications" }
aptos-executable-store = { path = "../aptos-core-1.7/storage/executable-store" }
aptos-executor = { path = "../aptos-core-1.7/execution/executor" }
aptos-block-partitioner = { path = "../aptos-core-1.7/execution/block-partitioner" }
aptos-enum-conversion-derive = { path = "../aptos-core-1.7/crates/aptos-enum-conversion-derive" }
aptos-executor-service = { path = "../aptos-core-1.7/execution/executor-service" }
aptos-executor-test-helpers = { path = "../aptos-core-1.7/execution/executor-test-helpers" }
aptos-executor-types = { path = "../aptos-core-1.7/execution/executor-types" }
aptos-faucet-cli = { path = "../aptos-core-1.7/crates/aptos-faucet/cli" }
aptos-faucet-core = { path = "../aptos-core-1.7/crates/aptos-faucet/core" }
aptos-faucet-service = { path = "../aptos-core-1.7/crates/aptos-faucet/service" }
aptos-faucet-metrics-server = { path = "../aptos-core-1.7/crates/aptos-faucet/metrics-server" }
aptos-fallible = { path = "../aptos-core-1.7/crates/fallible" }
aptos-forge = { path = "../aptos-core-1.7/testsuite/forge" }
aptos-framework = { path = "../aptos-core-1.7/aptos-move/framework" }
aptos-fuzzer = { path = "../aptos-core-1.7/testsuite/aptos-fuzzer" }
fuzzer = { path = "../aptos-core-1.7/testsuite/fuzzer" }
aptos-gas = { path = "../aptos-core-1.7/aptos-move/aptos-gas" }
aptos-gas-algebra-ext = { path = "../aptos-core-1.7/aptos-move/gas-algebra-ext" }
aptos-gas-profiling = { path = "../aptos-core-1.7/aptos-move/aptos-gas-profiling" }
aptos-genesis = { path = "../aptos-core-1.7/crates/aptos-genesis" }
aptos-github-client = { path = "../aptos-core-1.7/secure/storage/github" }
aptos-global-constants = { path = "../aptos-core-1.7/config/global-constants" }
aptos-id-generator = { path = "../aptos-core-1.7/crates/aptos-id-generator" }
aptos-indexer = { path = "../aptos-core-1.7/crates/indexer" }
aptos-indexer-grpc-cache-worker = { path = "../aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-cache-worker" }
aptos-indexer-grpc-data-service = { path = "../aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-data-service" }
aptos-indexer-grpc-file-store = { path = "../aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-file-store" }
aptos-indexer-grpc-post-processor = { path = "../aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-post-processor" }
aptos-indexer-grpc-fullnode = { path = "../aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-fullnode" }
aptos-indexer-grpc-utils = { path = "../aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-utils" }
aptos-indexer-grpc-parser = { path = "../aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-parser" }
aptos-indexer-grpc-server-framework = { path = "../aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-server-framework" }
aptos-infallible = { path = "../aptos-core-1.7/crates/aptos-infallible" }
aptos-inspection-service = { path = "../aptos-core-1.7/crates/aptos-inspection-service" }
aptos-jellyfish-merkle = { path = "../aptos-core-1.7/storage/jellyfish-merkle" }
aptos-keygen = { path = "../aptos-core-1.7/crates/aptos-keygen" }
aptos-language-e2e-tests = { path = "../aptos-core-1.7/aptos-move/e2e-tests" }
aptos-ledger = { path = "../aptos-core-1.7/crates/aptos-ledger" }
aptos-log-derive = { path = "../aptos-core-1.7/crates/aptos-log-derive" }
aptos-logger = { path = "../aptos-core-1.7/crates/aptos-logger" }
aptos-memory-usage-tracker = { path = "../aptos-core-1.7/aptos-move/aptos-memory-usage-tracker" }
aptos-mempool = { path = "../aptos-core-1.7/mempool" }
aptos-mempool-notifications = { path = "../aptos-core-1.7/state-sync/inter-component/mempool-notifications" }
aptos-memsocket = { path = "../aptos-core-1.7/network/memsocket" }
aptos-metrics-core = { path = "../aptos-core-1.7/crates/aptos-metrics-core" }
aptos-move-examples = { path = "../aptos-core-1.7/aptos-move/move-examples" }
aptos-moving-average = { path = "../aptos-core-1.7/crates/moving-average" }
aptos-mvhashmap = { path = "../aptos-core-1.7/aptos-move/mvhashmap" }
aptos-netcore = { path = "../aptos-core-1.7/network/netcore" }
aptos-network = { path = "../aptos-core-1.7/network" }
aptos-network-builder = { path = "../aptos-core-1.7/network/builder" }
aptos-network-checker = { path = "../aptos-core-1.7/crates/aptos-network-checker" }
aptos-network-discovery = { path = "../aptos-core-1.7/network/discovery" }
aptos-node = { path = "../aptos-core-1.7/aptos-node" }
aptos-node-checker = { path = "../aptos-core-1.7/ecosystem/node-checker" }
aptos-node-identity = { path = "../aptos-core-1.7/crates/aptos-node-identity" }
aptos-node-resource-metrics = { path = "../aptos-core-1.7/crates/node-resource-metrics" }
aptos-num-variants = { path = "../aptos-core-1.7/crates/num-variants" }
aptos-openapi = { path = "../aptos-core-1.7/crates/aptos-openapi" }
aptos-package-builder = { path = "../aptos-core-1.7/aptos-move/package-builder" }
aptos-peer-monitoring-service-client = { path = "../aptos-core-1.7/network/peer-monitoring-service/client" }
aptos-peer-monitoring-service-server = { path = "../aptos-core-1.7/network/peer-monitoring-service/server" }
aptos-peer-monitoring-service-types = { path = "../aptos-core-1.7/network/peer-monitoring-service/types" }
aptos-proptest-helpers = { path = "../aptos-core-1.7/crates/aptos-proptest-helpers" }
aptos-protos = { path = "../aptos-core-1.7/crates/aptos-protos" }
aptos-proxy = { path = "../aptos-core-1.7/crates/proxy" }
aptos-push-metrics = { path = "../aptos-core-1.7/crates/aptos-push-metrics" }
aptos-rate-limiter = { path = "../aptos-core-1.7/crates/aptos-rate-limiter" }
aptos-release-builder = { path = "../aptos-core-1.7/aptos-move/aptos-release-builder" }
aptos-resource-viewer = { path = "../aptos-core-1.7/aptos-move/aptos-resource-viewer" }
aptos-rest-client = { path = "../aptos-core-1.7/crates/aptos-rest-client" }
aptos-retrier = { path = "../aptos-core-1.7/crates/aptos-retrier" }
aptos-rocksdb-options = { path = "../aptos-core-1.7/storage/rocksdb-options" }
aptos-rosetta = { path = "../aptos-core-1.7/crates/aptos-rosetta" }
aptos-runtimes = { path = "../aptos-core-1.7/crates/aptos-runtimes" }
aptos-safety-rules = { path = "../aptos-core-1.7/consensus/safety-rules" }
aptos-schemadb = { path = "../aptos-core-1.7/storage/schemadb" }
aptos-scratchpad = { path = "../aptos-core-1.7/storage/scratchpad" }
aptos-sdk = { path = "../aptos-core-1.7/sdk" }
aptos-sdk-builder = { path = "../aptos-core-1.7/aptos-move/aptos-sdk-builder" }
aptos-secure-net = { path = "../aptos-core-1.7/secure/net" }
aptos-secure-storage = { path = "../aptos-core-1.7/secure/storage" }
aptos-short-hex-str = { path = "../aptos-core-1.7/crates/short-hex-str" }
aptos-speculative-state-helper = { path = "../aptos-core-1.7/crates/aptos-speculative-state-helper" }
aptos-state-sync-driver = { path = "../aptos-core-1.7/state-sync/state-sync-v2/state-sync-driver" }
aptos-state-view = { path = "../aptos-core-1.7/storage/state-view" }
aptos-storage-interface = { path = "../aptos-core-1.7/storage/storage-interface" }
aptos-storage-service-client = { path = "../aptos-core-1.7/state-sync/storage-service/client" }
aptos-storage-service-notifications = { path = "../aptos-core-1.7/state-sync/inter-component/storage-service-notifications" }
aptos-storage-service-types = { path = "../aptos-core-1.7/state-sync/storage-service/types" }
aptos-storage-service-server = { path = "../aptos-core-1.7/state-sync/storage-service/server" }
aptos-telemetry = { path = "../aptos-core-1.7/crates/aptos-telemetry" }
aptos-telemetry-service = { path = "../aptos-core-1.7/crates/aptos-telemetry-service" }
aptos-temppath = { path = "../aptos-core-1.7/crates/aptos-temppath" }
aptos-testcases = { path = "../aptos-core-1.7/testsuite/testcases" }
aptos-time-service = { path = "../aptos-core-1.7/crates/aptos-time-service", features = [
    "async",
] }
aptos-transaction-emitter-lib = { path = "../aptos-core-1.7/crates/transaction-emitter-lib" }
aptos-transaction-generator-lib = { path = "../aptos-core-1.7/crates/transaction-generator-lib" }
aptos-transactional-test-harness = { path = "../aptos-core-1.7/aptos-move/aptos-transactional-test-harness" }
aptos-types = { path = "../aptos-core-1.7/types" }
aptos-utils = { path = "../aptos-core-1.7/aptos-utils" }
aptos-validator-interface = { path = "../aptos-core-1.7/aptos-move/aptos-validator-interface" }
aptos-vault-client = { path = "../aptos-core-1.7/secure/storage/vault" }
aptos-vm = { path = "../aptos-core-1.7/aptos-move/aptos-vm" }
aptos-vm-logging = { path = "../aptos-core-1.7/aptos-move/aptos-vm-logging" }
aptos-vm-genesis = { path = "../aptos-core-1.7/aptos-move/vm-genesis" }
aptos-vm-types = { path = "../aptos-core-1.7/aptos-move/aptos-vm-types" }
aptos-vm-validator = { path = "../aptos-core-1.7/vm-validator" }
aptos-warp-webserver = { path = "../aptos-core-1.7/crates/aptos-warp-webserver" }
aptos-writeset-generator = { path = "../aptos-core-1.7/aptos-move/writeset-transaction-generator" }
