[workspace]
resolver = "2"
members = [
    "subnet",
    "movement",
    "movement-benchmark",
    "tests/e2e"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1.0.62"
futures = "0.3.28"
rand = { version =  "0.7.3" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }



async-trait = "0.1.53"
base64 = "0.13.0"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "3.2.23", features = ["derive", "env", "suggestions"] }
clap_complete = "3.2.3"
codespan-reporting = "0.11.1"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
dirs = "4.0.0"
hex = "0.4.3"
hkdf = "0.10.0"
hostname = "0.3.1"
http = "0.2.3"
httpmock = "0.6"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
include_dir = { version = "0.7.2", features = ["glob"] }
indicatif = "0.15.0"
indoc = "1.0.6"
inferno = "0.11.14"
ipnet = "2.5.0"
itertools = "0.10.3"
num_cpus = "1.13.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json", "stream"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.8.24"
shadow-rs = "0.16.2"
tempfile = "3.3.0"
termcolor = "1.1.2"
thiserror = "1.0.48"
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.5.9"
walkdir = "2.3.2"

jemallocator = { version = "0.3.2", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }

# MOVE DEPENDENCIES
move-abigen = { path = "../third-party/aptos-core-1.7/third_party/move/move-prover/move-abigen" }
move-binary-format = { path = "../third-party/aptos-core-1.7/third_party/move/move-binary-format" }
move-bytecode-verifier = { path = "../third-party/aptos-core-1.7/third_party/move/move-bytecode-verifier" }
move-bytecode-utils = { path = "../third-party/aptos-core-1.7/third_party/move/tools/move-bytecode-utils" }
move-cli = { path = "../third-party/aptos-core-1.7/third_party/move/tools/move-cli" }
move-command-line-common = { path = "../third-party/aptos-core-1.7/third_party/move/move-command-line-common" }
move-coverage = { path = "../third-party/aptos-core-1.7/third_party/move/tools/move-coverage" }
move-compiler = { path = "../third-party/aptos-core-1.7/third_party/move/move-compiler" }
move-core-types = { path = "../third-party/aptos-core-1.7/third_party/move/move-core/types" }
move-docgen = { path = "../third-party/aptos-core-1.7/third_party/move/move-prover/move-docgen" }
move-disassembler = { path = "../third-party/aptos-core-1.7/third_party/move/tools/move-disassembler" }
move-ir-types = { path = "../third-party/aptos-core-1.7/third_party/move/move-ir/types" }
move-ir-compiler = { path = "../third-party/aptos-core-1.7/third_party/move/move-ir-compiler" }
move-bytecode-source-map = { path = "../third-party/aptos-core-1.7/third_party/move/move-ir-compiler/move-bytecode-source-map" }
move-model = { path = "../third-party/aptos-core-1.7/third_party/move/move-model" }
move-package = { path = "../third-party/aptos-core-1.7/third_party/move/tools/move-package" }
move-prover = { path = "../third-party/aptos-core-1.7/third_party/move/move-prover" }
move-prover-boogie-backend = { path = "../third-party/aptos-core-1.7/third_party/move/move-prover/boogie-backend" }
move-stackless-bytecode = { path = "../third-party/aptos-core-1.7/third_party/move/move-prover/bytecode" }
aptos-move-stdlib = { path = "aptos-move/framework/move-stdlib" }
move-prover-test-utils = { path = "../third-party/aptos-core-1.7/third_party/move/move-prover/test-utils" }
move-resource-viewer = { path = "../third-party/aptos-core-1.7/third_party/move/tools/move-resource-viewer" }
move-symbol-pool = { path = "../third-party/aptos-core-1.7/third_party/move/move-symbol-pool" }
move-table-extension = { path = "../third-party/aptos-core-1.7/third_party/move/extensions/move-table-extension" }
move-transactional-test-runner = { path = "../third-party/aptos-core-1.7/third_party/move/testing-infra/transactional-test-runner" }
move-unit-test = { path = "../third-party/aptos-core-1.7/third_party/move/tools/move-unit-test", features = ["table-extension"] }
move-vm-runtime = { path = "../third-party/aptos-core-1.7/third_party/move/move-vm/runtime" }
move-vm-test-utils = { path = "../third-party/aptos-core-1.7/third_party/move/move-vm/test-utils", features = ["table-extension"] }
move-vm-types = { path = "../third-party/aptos-core-1.7/third_party/move/move-vm/types" }
read-write-set = { path = "../third-party/aptos-core-1.7/third_party/move/tools/read-write-set" }
read-write-set-dynamic = { path = "../third-party/aptos-core-1.7/third_party/move/tools/read-write-set/dynamic" }

# aptos
# TODO: pleas remove unused dependencies
aptos = { path = "../third-party/aptos-core-1.7/crates/aptos" }
aptos-accumulator = { path = "../third-party/aptos-core-1.7/storage/accumulator" }
aptos-aggregator = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-aggregator" }
aptos-api = { path = "../third-party/aptos-core-1.7/api" }
aptos-api-test-context = { path = "../third-party/aptos-core-1.7/api/test-context" }
aptos-api-types = { path = "../third-party/aptos-core-1.7/api/types" }
aptos-backup-cli = { path = "../third-party/aptos-core-1.7/storage/backup/backup-cli" }
aptos-backup-service = { path = "../third-party/aptos-core-1.7/storage/backup/backup-service" }
aptos-bounded-executor = { path = "../third-party/aptos-core-1.7/crates/bounded-executor" }
aptos-block-executor = { path = "../third-party/aptos-core-1.7/aptos-move/block-executor" }
aptos-bitvec = { path = "../third-party/aptos-core-1.7/crates/aptos-bitvec" }
aptos-build-info = { path = "../third-party/aptos-core-1.7/crates/aptos-build-info" }
aptos-cached-packages = { path = "../third-party/aptos-core-1.7/aptos-move/framework/cached-packages" }
aptos-channels = { path = "../third-party/aptos-core-1.7/crates/channel" }
aptos-cli-common = { path = "../third-party/aptos-core-1.7/crates/aptos-cli-common" }
aptos-compression = { path = "../third-party/aptos-core-1.7/crates/aptos-compression" }
aptos-consensus = { path = "../third-party/aptos-core-1.7/consensus" }
aptos-consensus-notifications = { path = "../third-party/aptos-core-1.7/state-sync/inter-component/consensus-notifications" }
aptos-consensus-types = { path = "../third-party/aptos-core-1.7/consensus/consensus-types" }
aptos-config = { path = "../third-party/aptos-core-1.7/config" }
aptos-crash-handler = { path = "../third-party/aptos-core-1.7/crates/crash-handler" }
aptos-crypto = { path = "../third-party/aptos-core-1.7/crates/aptos-crypto" }
aptos-crypto-derive = { path = "../third-party/aptos-core-1.7/crates/aptos-crypto-derive" }
aptos-data-client = { path = "../third-party/aptos-core-1.7/state-sync/aptos-data-client" }
aptos-data-streaming-service = { path = "../third-party/aptos-core-1.7/state-sync/state-sync-v2/data-streaming-service" }
aptos-db = { path = "../third-party/aptos-core-1.7/storage/aptosdb" }
aptos-db-indexer = { path = "../third-party/aptos-core-1.7/storage/indexer" }
aptos-db-tool = { path = "../third-party/aptos-core-1.7/storage/db-tool" }
aptos-debugger = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-debugger" }
aptos-event-notifications = { path = "../third-party/aptos-core-1.7/state-sync/inter-component/event-notifications" }
aptos-executable-store = { path = "../third-party/aptos-core-1.7/storage/executable-store" }
aptos-executor = { path = "../third-party/aptos-core-1.7/execution/executor" }
aptos-block-partitioner = { path = "../third-party/aptos-core-1.7/execution/block-partitioner" }
aptos-enum-conversion-derive = { path = "../third-party/aptos-core-1.7/crates/aptos-enum-conversion-derive" }
aptos-executor-service = { path = "../third-party/aptos-core-1.7/execution/executor-service" }
aptos-executor-test-helpers = { path = "../third-party/aptos-core-1.7/execution/executor-test-helpers" }
aptos-executor-types = { path = "../third-party/aptos-core-1.7/execution/executor-types" }
aptos-faucet-cli = { path = "../third-party/aptos-core-1.7/crates/aptos-faucet/cli" }
aptos-faucet-core = { path = "../third-party/aptos-core-1.7/crates/aptos-faucet/core" }
aptos-faucet-service = { path = "../third-party/aptos-core-1.7/crates/aptos-faucet/service" }
aptos-faucet-metrics-server = { path = "../third-party/aptos-core-1.7/crates/aptos-faucet/metrics-server" }
aptos-fallible = { path = "../third-party/aptos-core-1.7/crates/fallible" }
aptos-forge = { path = "../third-party/aptos-core-1.7/testsuite/forge" }
aptos-framework = { path = "../third-party/aptos-core-1.7/aptos-move/framework" }
aptos-fuzzer = { path = "../third-party/aptos-core-1.7/testsuite/aptos-fuzzer" }
fuzzer = { path = "../third-party/aptos-core-1.7/testsuite/fuzzer" }
aptos-gas = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-gas" }
aptos-gas-algebra-ext = { path = "../third-party/aptos-core-1.7/aptos-move/gas-algebra-ext" }
aptos-gas-profiling = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-gas-profiling" }
aptos-genesis = { path = "../third-party/aptos-core-1.7/crates/aptos-genesis" }
aptos-github-client = { path = "../third-party/aptos-core-1.7/secure/storage/github" }
aptos-global-constants = { path = "../third-party/aptos-core-1.7/config/global-constants" }
aptos-id-generator = { path = "../third-party/aptos-core-1.7/crates/aptos-id-generator" }
aptos-indexer = { path = "../third-party/aptos-core-1.7/crates/indexer" }
aptos-indexer-grpc-cache-worker = { path = "../third-party/aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-cache-worker" }
aptos-indexer-grpc-data-service = { path = "../third-party/aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-data-service" }
aptos-indexer-grpc-file-store = { path = "../third-party/aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-file-store" }
aptos-indexer-grpc-post-processor = { path = "../third-party/aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-post-processor" }
aptos-indexer-grpc-fullnode = { path = "../third-party/aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-fullnode" }
aptos-indexer-grpc-utils = { path = "../third-party/aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-utils" }
aptos-indexer-grpc-parser = { path = "../third-party/aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-parser" }
aptos-indexer-grpc-server-framework = { path = "../third-party/aptos-core-1.7/ecosystem/indexer-grpc/indexer-grpc-server-framework" }
aptos-infallible = { path = "../third-party/aptos-core-1.7/crates/aptos-infallible" }
aptos-inspection-service = { path = "../third-party/aptos-core-1.7/crates/aptos-inspection-service" }
aptos-jellyfish-merkle = { path = "../third-party/aptos-core-1.7/storage/jellyfish-merkle" }
aptos-keygen = { path = "../third-party/aptos-core-1.7/crates/aptos-keygen" }
aptos-language-e2e-tests = { path = "../third-party/aptos-core-1.7/aptos-move/e2e-tests" }
aptos-ledger = { path = "../third-party/aptos-core-1.7/crates/aptos-ledger" }
aptos-log-derive = { path = "../third-party/aptos-core-1.7/crates/aptos-log-derive" }
aptos-logger = { path = "../third-party/aptos-core-1.7/crates/aptos-logger" }
aptos-memory-usage-tracker = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-memory-usage-tracker" }
aptos-mempool = { path = "../third-party/aptos-core-1.7/mempool" }
aptos-mempool-notifications = { path = "../third-party/aptos-core-1.7/state-sync/inter-component/mempool-notifications" }
aptos-memsocket = { path = "../third-party/aptos-core-1.7/network/memsocket" }
aptos-metrics-core = { path = "../third-party/aptos-core-1.7/crates/aptos-metrics-core" }
aptos-move-examples = { path = "../third-party/aptos-core-1.7/aptos-move/move-examples" }
aptos-moving-average = { path = "../third-party/aptos-core-1.7/crates/moving-average" }
aptos-mvhashmap = { path = "../third-party/aptos-core-1.7/aptos-move/mvhashmap" }
aptos-netcore = { path = "../third-party/aptos-core-1.7/network/netcore" }
aptos-network = { path = "../third-party/aptos-core-1.7/network" }
aptos-network-builder = { path = "../third-party/aptos-core-1.7/network/builder" }
aptos-network-checker = { path = "../third-party/aptos-core-1.7/crates/aptos-network-checker" }
aptos-network-discovery = { path = "../third-party/aptos-core-1.7/network/discovery" }
aptos-node = { path = "../third-party/aptos-core-1.7/aptos-node" }
aptos-node-checker = { path = "../third-party/aptos-core-1.7/ecosystem/node-checker" }
aptos-node-identity = { path = "../third-party/aptos-core-1.7/crates/aptos-node-identity" }
aptos-node-resource-metrics = { path = "../third-party/aptos-core-1.7/crates/node-resource-metrics" }
aptos-num-variants = { path = "../third-party/aptos-core-1.7/crates/num-variants" }
aptos-openapi = { path = "../third-party/aptos-core-1.7/crates/aptos-openapi" }
aptos-package-builder = { path = "../third-party/aptos-core-1.7/aptos-move/package-builder" }
aptos-peer-monitoring-service-client = { path = "../third-party/aptos-core-1.7/network/peer-monitoring-service/client" }
aptos-peer-monitoring-service-server = { path = "../third-party/aptos-core-1.7/network/peer-monitoring-service/server" }
aptos-peer-monitoring-service-types = { path = "../third-party/aptos-core-1.7/network/peer-monitoring-service/types" }
aptos-proptest-helpers = { path = "../third-party/aptos-core-1.7/crates/aptos-proptest-helpers" }
aptos-protos = { path = "../third-party/aptos-core-1.7/crates/aptos-protos" }
aptos-proxy = { path = "../third-party/aptos-core-1.7/crates/proxy" }
aptos-push-metrics = { path = "../third-party/aptos-core-1.7/crates/aptos-push-metrics" }
aptos-rate-limiter = { path = "../third-party/aptos-core-1.7/crates/aptos-rate-limiter" }
aptos-release-builder = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-release-builder" }
aptos-resource-viewer = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-resource-viewer" }
aptos-rest-client = { path = "../third-party/aptos-core-1.7/crates/aptos-rest-client" }
aptos-retrier = { path = "../third-party/aptos-core-1.7/crates/aptos-retrier" }
aptos-rocksdb-options = { path = "../third-party/aptos-core-1.7/storage/rocksdb-options" }
aptos-rosetta = { path = "../third-party/aptos-core-1.7/crates/aptos-rosetta" }
aptos-runtimes = { path = "../third-party/aptos-core-1.7/crates/aptos-runtimes" }
aptos-safety-rules = { path = "../third-party/aptos-core-1.7/consensus/safety-rules" }
aptos-schemadb = { path = "../third-party/aptos-core-1.7/storage/schemadb" }
aptos-scratchpad = { path = "../third-party/aptos-core-1.7/storage/scratchpad" }
aptos-sdk = { path = "../third-party/aptos-core-1.7/sdk" }
aptos-sdk-builder = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-sdk-builder" }
aptos-secure-net = { path = "../third-party/aptos-core-1.7/secure/net" }
aptos-secure-storage = { path = "../third-party/aptos-core-1.7/secure/storage" }
aptos-short-hex-str = { path = "../third-party/aptos-core-1.7/crates/short-hex-str" }
aptos-speculative-state-helper = { path = "../third-party/aptos-core-1.7/crates/aptos-speculative-state-helper" }
aptos-state-sync-driver = { path = "../third-party/aptos-core-1.7/state-sync/state-sync-v2/state-sync-driver" }
aptos-state-view = { path = "../third-party/aptos-core-1.7/storage/state-view" }
aptos-storage-interface = { path = "../third-party/aptos-core-1.7/storage/storage-interface" }
aptos-storage-service-client = { path = "../third-party/aptos-core-1.7/state-sync/storage-service/client" }
aptos-storage-service-notifications = { path = "../third-party/aptos-core-1.7/state-sync/inter-component/storage-service-notifications" }
aptos-storage-service-types = { path = "../third-party/aptos-core-1.7/state-sync/storage-service/types" }
aptos-storage-service-server = { path = "../third-party/aptos-core-1.7/state-sync/storage-service/server" }
aptos-telemetry = { path = "../third-party/aptos-core-1.7/crates/aptos-telemetry" }
aptos-telemetry-service = { path = "../third-party/aptos-core-1.7/crates/aptos-telemetry-service" }
aptos-temppath = { path = "../third-party/aptos-core-1.7/crates/aptos-temppath" }
aptos-testcases = { path = "../third-party/aptos-core-1.7/testsuite/testcases" }
aptos-time-service = { path = "../third-party/aptos-core-1.7/crates/aptos-time-service", features = [
    "async",
] }
aptos-transaction-emitter-lib = { path = "../third-party/aptos-core-1.7/crates/transaction-emitter-lib" }
aptos-transaction-generator-lib = { path = "../third-party/aptos-core-1.7/crates/transaction-generator-lib" }
aptos-transactional-test-harness = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-transactional-test-harness" }
aptos-types = { path = "../third-party/aptos-core-1.7/types" }
aptos-utils = { path = "../third-party/aptos-core-1.7/aptos-utils" }
aptos-validator-interface = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-validator-interface" }
aptos-vault-client = { path = "../third-party/aptos-core-1.7/secure/storage/vault" }
aptos-vm = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-vm" }
aptos-vm-logging = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-vm-logging" }
aptos-vm-genesis = { path = "../third-party/aptos-core-1.7/aptos-move/vm-genesis" }
aptos-vm-types = { path = "../third-party/aptos-core-1.7/aptos-move/aptos-vm-types" }
aptos-vm-validator = { path = "../third-party/aptos-core-1.7/vm-validator" }
aptos-warp-webserver = { path = "../third-party/aptos-core-1.7/crates/aptos-warp-webserver" }
aptos-writeset-generator = { path = "../third-party/aptos-core-1.7/aptos-move/writeset-transaction-generator" }
